<resources>
    <string name="app_name">NekoFX Music Player</string>
    <string name="title_music">Music</string>
    <string name="title_album">Album</string>
    <string name="title_artist">Artist</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_fx">FX</string>


    <string name="title_settings">Settings</string>

    <string name="title_play">Play now</string>
    <string name="title_play_next">Play next</string>
    <string name="title_add_playlist">Add to playlist</string>
    <string name="title_share">Share</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
