<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_icon_music"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_icon_album"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/ic_icon_artist"
        android:title="@string/title_artist" />
    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/ic_icon_playlist"
        android:title="@string/title_playlist"
        />
    <item
        android:id="@+id/navigation_fx"
        android:title="@string/title_fx"
        android:icon="@drawable/ic_icon_fx"
        />

</menu>
